<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Numpty Physics</string>


    <string name="init">Initializing</string>
    <string name="please_wait">Please wait while data is being downloaded</string>

    <string name="device_config">Device configuration</string>
    <string name="device_change_cfg">Change device configuration</string>

    <string name="download_unneeded">No need to download</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="failed_connecting_to">Failed connecting to %s</string>
    <string name="error_connecting_to">Error connecting to %s</string>
    <string name="dl_from">Downloading data from %s</string>
    <string name="error_dl_from">Error downloading data from %s</string>
    <string name="error_write">Error writing to %s</string>
    <string name="dl_progress">%1$.0f%% done: file %2$s</string>
    <string name="dl_finished">Finished</string>

    <string name="storage_phone">Internal storage - %d MB free</string>
    <string name="storage_sd">SD card storage - %d MB free</string>
    <string name="storage_custom">Specify directory</string>
    <string name="storage_commandline">Specify command line parameters</string>
    <string name="storage_question">Where to download application data</string>
    <string name="optional_downloads">Optional downloads</string>
    <string name="downloads">Downloads</string>
    <string name="ok">OK</string>

    <string name="controls_arrows">Arrows / joystick / dpad</string>
    <string name="controls_trackball">Trackball</string>
    <string name="controls_accel">Accelerometer</string>
    <string name="controls_touch">Touchscreen only</string>
    <string name="controls_question">What kind of navigation keys does your device have?</string>

    <string name="controls_additional">Additional controls to use</string>
    <string name="controls_screenkb">On-screen keyboard</string>
    <string name="controls_accelnav">Accelerometer</string>

    <string name="controls_screenkb_size">On-screen keyboard size</string>
    <string name="controls_screenkb_large">Large</string>
    <string name="controls_screenkb_medium">Medium</string>
    <string name="controls_screenkb_small">Small</string>
    <string name="controls_screenkb_tiny">Tiny</string>
    <string name="controls_screenkb_theme">On-screen keyboard theme</string>
    <string name="controls_screenkb_by">%1$s by %2$s</string>
    <string name="controls_screenkb_transparency">On-screen keyboard transparency</string>
    <string name="controls_screenkb_trans_0">Invisible</string>
    <string name="controls_screenkb_trans_1">Almost invisible</string>
    <string name="controls_screenkb_trans_2">Transparent</string>
    <string name="controls_screenkb_trans_3">Semi-transparent</string>
    <string name="controls_screenkb_trans_4">Non-transparent</string>

    <string name="trackball_no_dampening">No dampening</string>
    <string name="trackball_fast">Fast</string>
    <string name="trackball_medium">Medium</string>
    <string name="trackball_slow">Slow</string>
    <string name="trackball_question">Trackball dampening</string>

    <string name="accel_veryfast">Very fast</string>
    <string name="accel_fast">Fast</string>
    <string name="accel_medium">Medium</string>
    <string name="accel_slow">Slow</string>
    <string name="accel_veryslow">Very slow</string>
    <string name="accel_question">Accelerometer sensitivity</string>

    <string name="accel_floating">Floating</string>
    <string name="accel_fixed_start">Fixed when application starts</string>
    <string name="accel_fixed_horiz">Fixed to table desk orientation</string>
    <string name="accel_question_center">Accelerometer center position</string>

    <string name="mouse_emulation">Mouse emulation</string>
    <string name="rightclick_question">Right mouse click</string>
    <string name="rightclick_menu">Menu key</string>
    <string name="rightclick_key">Physical key</string>
    <string name="rightclick_multitouch">Touch screen with second finger</string>
    <string name="rightclick_pressure">Touch screen with force</string>
    <string name="rightclick_none">Disable right mouse click</string>

    <string name="leftclick_question">Left mouse click</string>
    <string name="leftclick_normal">Normal</string>
    <string name="leftclick_near_cursor">Touch near mouse cursor</string>
    <string name="leftclick_multitouch">Touch screen with second finger</string>
    <string name="leftclick_pressure">Touch screen with force</string>
    <string name="leftclick_dpadcenter">Trackball click / joystick center</string>
    <string name="leftclick_timeout">Hold at the same spot</string>
    <string name="leftclick_tap">Tap</string>
    <string name="leftclick_tap_or_timeout">Tap or hold</string>
    <string name="leftclick_timeout_time">Holding timeout</string>
    <string name="leftclick_timeout_time_0">0.3 sec</string>
    <string name="leftclick_timeout_time_1">0.5 sec</string>
    <string name="leftclick_timeout_time_2">0.7 sec</string>
    <string name="leftclick_timeout_time_3">1 sec</string>
    <string name="leftclick_timeout_time_4">1.5 sec</string>
    <string name="click_with_dpadcenter">Left mouse click with trackball / joystick center</string>

    <string name="pointandclick_question">Advanced features</string>
    <string name="pointandclick_keepaspectratio">Keep 4:3 screen aspect ratio</string>
    <string name="pointandclick_showcreenunderfinger">Show screen under finger in separate window</string>
    <string name="pointandclick_showcreenunderfinger2">On-screen magnifying glass</string>
    <string name="pointandclick_joystickmouse">Move mouse with joystick or trackball</string>
    <string name="pointandclick_joystickmousespeed">Move mouse with joystick speed</string>
    <string name="pointandclick_joystickmouseaccel">Move mouse with joystick acceleration</string>
    <string name="pointandclick_relative">Relative mouse movement (laptop mode)</string>
    <string name="pointandclick_relative_speed">Relative mouse movement speed</string>
    <string name="pointandclick_relative_accel">Relative mouse movement acceleration</string>

    <string name="none">None</string>

    <string name="measurepressure">Calibrate touchscreen pressure</string>
    <string name="measurepressure_touchplease">Please slide finger across the screen for two seconds</string>
    <string name="measurepressure_response">Pressure %1$03d radius %2$03d</string>

    <string name="audiobuf_verysmall">Very small (fast devices, less lag)</string>
    <string name="audiobuf_small">Small</string>
    <string name="audiobuf_medium">Medium</string>
    <string name="audiobuf_large">Large (older devices, if sound is choppy)</string>
    <string name="audiobuf_question">Size of audio buffer</string>

    <string name="remap_hwkeys">Remap physical keys</string>
    <string name="remap_hwkeys_press">Press any key except HOME and POWER, you may use volume keys</string>
    <string name="remap_hwkeys_select">Select SDL keycode</string>

    <string name="remap_screenkb">Remap on-screen controls</string>
    <string name="remap_screenkb_joystick">On-screen joystick</string>
    <string name="remap_screenkb_button">On-screen button</string>
    <string name="remap_screenkb_button_text">On-screen text input button</string>
    <string name="remap_screenkb_button_gestures">Two-finger screen gestures</string>
    <string name="remap_screenkb_button_gestures_sensitivity">Two-finger screen gestures sensitivity</string>
    <string name="remap_screenkb_button_zoomin">Zoom in two-finger gesture</string>
    <string name="remap_screenkb_button_zoomout">Zoom out two-finger gesture</string>
    <string name="remap_screenkb_button_rotateleft">Rotate left two-finger gesture</string>
    <string name="remap_screenkb_button_rotateright">Rotate right two-finger gesture</string>

    <string name="screenkb_custom_layout">Customize on-screen keyboard layout</string>
    <string name="screenkb_custom_layout_help">Slide screen to add button, press Menu to undo last button</string>

    <string name="calibrate_touchscreen">Calibrate touchscreen</string>
    <string name="calibrate_touchscreen_touch">Touch all four edges of the screen, press Menu when done</string>

    <string name="video">Video settings</string>
    <string name="video_smooth">Smooth the video</string>
    <string name="video_separatethread">Separate thread for video, will increase FPS on some devices</string>

    <string name="text_edit_click_here">Tap to start typing, press Back when done</string>

	<string name="reset">Reset</string>
	<string name="prev_level">Prev</string>
	<string name="next_level">Next</string>
	<string name="help">Help</string>
	<string name="settings">Settings</string>
	<string name="close">Quit</string>	
	<string name="select_sound">Select Sound</string>
	<string name="sound_settings">Sound Settings</string>
	<string name="backgroundSoundEnable">Enable Sound</string>	
	<string name="soundTrack">Select Sound</string>	
	<string name="soundTrack_summayr">Backgroup sound track being played in game</string>			
	<string name="loading">Loading...</string>	
	<string name="other_settings"></string>
	<string name="about">About</string>
	
	<!-- MAIN about -->
	<string name="about_title_msg">About</string>
	<string name="about_content_msg"   > Numpty Physics by Tiger</string>
	<string name="about_content_ver"    >   Version    : </string>
	<string name="about_content_release">   Release    : </string>
	<string name="about_content_author" >   Author     : </string>
	<string name="about_content_bug"    >   Bug report : </string>	
	
	<string-array name="exit_game_options">
		<item>Back to game</item>
		<item>Quit</item>
	</string-array>
	

	
	
</resources>
